argo/services/planka/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: planka
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes: planka-favicons,planka-user-avatars,planka-background-images,planka-attachments
    spec:
      containers:
        - name: planka
          image: planka
          ports:
            - containerPort: 1337
          volumeMounts:
            - name: planka-favicons
              mountPath: /app/public/favicons
            - name: planka-user-avatars
              mountPath: /app/public/user-avatars
            - name: planka-background-images
              mountPath: /app/public/background-images
            - name: planka-attachments
              mountPath: /app/private/attachments/
      volumes:
        - name: planka-favicons
          persistentVolumeClaim:
            claimName: planka-favicons
        - name: planka-user-avatars
          persistentVolumeClaim:
            claimName: planka-user-avatars
        - name: planka-background-images
          persistentVolumeClaim:
            claimName: planka-background-images
        - name: planka-attachments
          persistentVolumeClaim:
            claimName: planka-attachments
